routerlink changes comit

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -39,14 +39,15 @@
                 <div class="border p-4 rounded mb-4">
                     <h3 class="mb-3 h6 text-uppercase text-black d-block">Categories</h3>
                     <ul class="list-unstyled mb-0">
-                        <li class="mb-1"><a href="list" class="d-flex"><span>Men</span> <span
+                        <li class="mb-1"><a routerLink="../list" class="d-flex"><span>Men</span> <span
                                     class="text-black ml-auto">(2,220)</span></a></li>
-                        <li class="mb-1"><a href="list1" class="d-flex"><span>Women</span> <span
+                        <li class="mb-1"><a routerLink="../list1" class="d-flex"><span>Women</span> <span
                                     class="text-black ml-auto">(2,550)</span></a></li>
-                        <li class="mb-1"><a href="list2" class="d-flex"><span>Children</span> <span
+                        <li class="mb-1"><a routerLink="../list2" class="d-flex"><span>Children</span> <span
                                     class="text-black ml-auto">(2,124)</span></a></li>
                     </ul>
                 </div>
+                
 
                 <div class="border p-4 rounded mb-4">
                     <div class="mb-4">
