routerlink changes done

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
                             <li><a href="#"><span class="icon icon-person"></span></a></li>
                             <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
                             <li>
-                                <a href="cart.html" class="site-cart">
+                                <a href="#" class="site-cart">
                                     <span class="icon icon-shopping_cart"></span>
                                     <span class="count">2</span>
                                 </a>
@@ -41,8 +41,8 @@
         <div class="container">
             <ul class="site-menu js-clone-nav d-none d-md-block">
                 <li class="active"><a routerLink="">Home</a></li>
-                <li ><a routerLink="about">About</a></li>
-                <li><a routerLink="shop">Shop</a></li>
+                <li ><a routerLink="./about">About</a></li>
+                <li><a routerLink="./shop">Shop</a></li>
                 <li><a routerLink="product/create">Catalogue</a></li>
                 <li class="has-children">
                     <a routerLink="about">Actions</a>
