--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -41,8 +41,8 @@
         <div class="container">
             <ul class="site-menu js-clone-nav d-none d-md-block">
                 <li class="active"><a routerLink="">Home</a></li>
-                <li ><a routerLink="../about">About</a></li>
-                <li><a routerLink="../shop">Shop</a></li>
+                <li ><a [routerLink]="['/about']">About</a></li>
+                <li><a routerLink="shop">Shop</a></li>
                 <li><a routerLink="product/create">Catalogue</a></li>
                 <li class="has-children">
                     <a routerLink="about">Actions</a>
