--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,10 +19,10 @@
                 <div class="col-6 col-md-4 order-3 order-md-3 text-right">
                     <div class="site-top-icons">
                         <ul>
-                            <li><a href="#"><span class="icon icon-person"></span></a></li>
-                            <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
+                            <li><a routerLink="register" tooltip="Register"><span class="icon icon-user"></span></a></li>
+                            <li><a routerLink="login" tooltip="Login"><span class="icon icon-sign-in"></span></a></li>
                             <li>
-                                <a href="#" class="site-cart">
+                                <a routerLink="product/list" class="site-cart">
                                     <span class="icon icon-shopping_cart"></span>
                                     <span class="count">2</span>
                                 </a>
