--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,3 +1,4 @@
+<br>
 <div class="container">
     <div class="card bg-light">
         <article class="card-body mx-auto" style="max-width: 400px;">
@@ -16,7 +17,7 @@
                     </div>
                     <input class="form-control" placeholder="Create password" type="password" formControlName="password">
                 </div> <!-- form-group// -->
-                
+                {{loginForm.valid}}
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary btn-block" type="submit" value="Login">
                 </div> <!-- form-group// -->
