--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -42,7 +42,7 @@
             <ul class="site-menu js-clone-nav d-none d-md-block">
                 <li class="active"><a routerLink="">Home</a></li>
                 <li ><a [routerLink]="['/about']">About</a></li>
-                <li><a routerLink="shop">Shop</a></li>
+                <li><a routerLink="login">Shop</a></li>
                 <li><a routerLink="product/create">Catalogue</a></li>
                 <li class="has-children">
                     <a routerLink="about">Actions</a>
