minor changes done

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -15,7 +15,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
                     </div>
-                    <input class="form-control" placeholder="Create password" type="password" formControlName="password">
+                    <input class="form-control" placeholder="Password" type="password" formControlName="password">
                 </div> <!-- form-group// -->
                 {{loginForm.valid}}
                 <div class="form-group">
